		"truncation" rather than "truncate"
	Added ec/gp/ge/breed/GECrossoverPipeline.java
	Added hooks to ListCrossoverPipeline to simplify and unify
		GECrossoverPipeline
	Heavy revisions to GE package to allow conversions back and forth
		between GE and GP trees
	Added CheckingPipeline.java
	Removed GPNode.nodeInPosition(int, GPNodeGatherer, int).  It is now
		private, and certain more rational cover functions are
		available in its place.
	Added GPNode.iterator(...) methods
	Added new GPNode.numNodes(...) method.
	GPNodeGatherer is now abstract.
	Whenever ParameterDatabase loads a class using Class.forName(...),
		it now instead uses Class.forName(..., , true, 
			Thread.currentThread().getContextClassLoader()).
		This solves an obscure and rare bug where, if you place the
		ecj.jar file in the Extension Classes location on your
		computer (such as /Library/Java/Extension/ on a Mac) rather
		than in the CLASSPATH, the ParameterDatabase cannot load
		classes normally found in the CLASSPATH because it has been
		assigned a different ClassLoader than they have.  Java's
		class loading model is bizarre and arcane.
	ECSuite now allows you to specify the rotation seed
	Fix to NSGA2Breeder, which was breeding the wrong individuals if
		multiple subpopulations were used (an unusual case).  Thanks
		to Torsten Hildebrandt <hil@biba.uni-bremen.de>
	Parallel slaves now construct names for themselves using unique
		numbers.
	Fixed a bug in SlaveConnection which was causing slaves to hang
		on quitting.  This was because the writeLoop thread was
		waiting on the jobs monitor, but when interrupted it couldn't
		retrieve all of its previous mutexes, so it would block;
		but the method which had interrupted it, and was holding
		on to the mutexes, then did a join on the thread, so they
		were waiting for each other.  Thanks to Eric Scott
		<escott8@gmu.edu>
	SteadyStateEvolutionState now properly checks for steady state
		statistics objects.  Thanks to Eric Scott <escott8@gmu.edu>